@@ -1,64 +1,39 @@
 package com.seatapp.repositories;
 
 import com.seatapp.domain.Seat;
+import com.seatapp.entities.FloorEntity;
 import com.seatapp.entities.SeatEntity;
 import com.seatapp.exceptions.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class SeatRepositoryImpl implements SeatRepository {
-    /**
-     * Loading in the data for an island of 4 seats.
-     */
-    private static final int ISLAND_SEAT4 = 5;
-
-    /**
-     * Loading in the data for an island of 6 seats.
-     */
-    private static final int ISLAND_SEAT6 = 7;
-
-
     /**
      * The seat repository.
      */
     private final SeatRepositoryJpa repository;
 
     /**
-     * Creates the SeatRepositoryImpl.
-     *
-     * @param repository the repository.
+     * The floor repository.
      */
-    @Autowired
-    public SeatRepositoryImpl(final SeatRepositoryJpa repository) {
-        this.repository = repository;
-        initEntities();
-    }
+    private final FloorRepositoryJpa floorRepository;
 
     /**
-     * Initialize the static floorplan.
+     * Creates the SeatRepositoryImpl.
+     *
+     * @param repository      the repository.
+     * @param floorRepository the floor repository
      */
-    private void initEntities() {
-        for (int i = 1; i < ISLAND_SEAT4; i++) {
-            save(new Seat("A" + i));
-            save(new Seat("B" + i));
-            save(new Seat("C" + i));
-            save(new Seat("D" + i));
-        }
-
-        for (int i = 1; i < ISLAND_SEAT6; i++) {
-            save(new Seat("E" + i));
-            save(new Seat("F" + i));
-            save(new Seat("G" + i));
-            save(new Seat("H" + i));
-            save(new Seat("I" + i));
-            save(new Seat("J" + i));
-            save(new Seat("K" + i));
-        }
+    @Autowired
+    public SeatRepositoryImpl(final SeatRepositoryJpa repository,
+                              final FloorRepositoryJpa floorRepository) {
+        this.repository = repository;
+        this.floorRepository = floorRepository;
     }
 
     /**
@@ -98,7 +73,7 @@ public class SeatRepositoryImpl implements SeatRepository {
         List<SeatEntity> entities = repository.findAll();
 
         return entities.stream().map(SeatEntity::toSeat)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -119,6 +94,11 @@ public class SeatRepositoryImpl implements SeatRepository {
      */
     @Override
     public void deleteAll() {
+        for (FloorEntity floor : floorRepository.findAll()) {
+            floor.setSeats(new ArrayList<>());
+            floorRepository.save(floor);
+        }
+
         repository.deleteAll();
     }
 }
